# XorEncryptFile

./: CMakeLists.txt  README.md  XorEncryptFile.cpp  XorEncryptFile.hpp  clang-format  main.cpp
tests/: CMakeLists.txt  simple_test.cpp
